...
    android:layout_height="match_parent">

    <Button
        android:elevation="3dp"
        android:fontFamily="@font/raleway"
        android:textAllCaps="false"
        android:id="@+id/btnemp"
        android:text="Employees"
        android:textSize="15sp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:background="@drawable/login_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="30dp"
        android:elevation="3dp"
        android:fontFamily="@font/raleway"
        android:textAllCaps="false"
        android:id="@+id/btncust"
        android:text="Customer"
        android:textSize="15sp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:background="@drawable/login_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:fontFamily="@font/raleway"
        android:id="@+id/btnproject"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:text="Projects"
        android:textSize="15sp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:background="@drawable/login_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:fontFamily="@font/raleway"
        android:id="@+id/btnpayment"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:text="Payment"
        android:textSize="15sp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:background="@drawable/login_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
...
