...
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <EditText
                android:textSize="14sp"
                android:id="@+id/etusername"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/login_edittext"
                android:fontFamily="@font/raleway"
                android:hint="Email or User ID"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:nextFocusForward="@id/etpassword"
                android:paddingLeft="30dp"
                android:singleLine="true"
                android:textColor="@color/grey"
                android:textColorHint="@color/lightgrey" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:passwordToggleTint="@color/lightgrey"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">
...
                    android:singleLine="true"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/lightgrey" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:background="@color/orange"
                android:fontFamily="@font/raleway"
                android:lineSpacingExtra="8sp"
                android:text="login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif" />

...
