...
                    android:id="@+id/etdob"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    style="@style/edittext"
                    android:hint="Date Of Birth" />
                <Button
                    android:id="@+id/btnsetdate"
                    android:paddingLeft="0dp"
                    android:gravity="center"
                    android:layout_height="35dp"
                    android:layout_marginLeft="20dp"
                    style="@style/edittext"
                    android:background="@color/lightgrey"
                    android:text="pick"
                    android:layout_weight="0.2"
                    android:layout_width="0dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:id="@+id/etcountry"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    style="@style/edittext"
                    android:hint="Country" />
                <Button
                    android:id="@+id/btncountry"
                    android:paddingLeft="0dp"
                    android:gravity="center"
                    android:layout_height="35dp"
                    android:layout_marginLeft="20dp"
                    style="@style/edittext"
                    android:background="@color/lightgrey"
...
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <LinearLayout
                android:id="@+id/llhide"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="invisible">

                <Button
                    android:id="@+id/btnempproject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/login_edittext"
                    android:elevation="3dp"
...
